# gst-streaming

./: .gitignore  .screen.c.swp  CMakeLists.txt  README.md  main.c  pipeline.txt  pipeline2.txt  screen.c  screen.h
include/: receiver_parse.h  receiver_screen.h  screen.h  sender_parse.h  sender_screen.h
src/: gst-udp-sender.c  main.c  receiver.c  receiver_parse.c  receiver_screen.c  screen.c  sender.c  sender_parse.c  sender_screen.c
